feat: support android sdk 24